[package]
name = "toip"
version = "0.0.2"
edition = "2021"
authors = ["Arthurdw <dev@arthurdw.com>"]
description = "Get the top ip addresses from a log file"
license = "MIT"
repository = "https://github.com/Arthurdw/toip"
readme = "README.md"

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
hashbrown = "0.13.2"
rayon = "1.7.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde_json = "1.0.93"
